src/styles/winbox.scss
.wb-body {
  background-color: var(--windowBg) !important;
  padding: 1rem;
  border-bottom-right-radius: var(--radius);
  border-bottom-left-radius: var(--radius);
}

.winbox {
  border-radius: var(--radius);
  border: 1px solid black;
}

.wb-no-focus {
  background-color: var(--windowBg) !important;
  .wb-title {
    border-bottom: 1px solid black;
  }

  .wb-icon {
    border-bottom: 1px solid black;
  }
}

.wb-focus {
  background-color: var(--focusBg) !important;
  .wb-title {
    border-bottom: 1px solid var(--primaryText);
  }

  .wb-icon {
    border-bottom: 1px solid var(--primaryText);
  }
}

@media (max-width: 1000px) {
  .winbox {
    border-radius: 0px;
  }

  .wb-body {
    border-radius: 0px;
  }
}

.mainContainer {
  min-height: 100vh;
  margin: 0;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

.popupTerminaWindowContainer {
  display: grid;
  grid-template-rows: auto auto auto;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-areas:
    "header header header header"
    "image text text text"
    "linkIcons text text text";

  column-gap: 2vw;
  row-gap: 2vh;
}

.popupTerminalWindowImageContainer {
  display: grid;
  grid-area: image;
  place-items: center center;
  place-self: center center;
}
.popupTerminaWindowImage {
  width: 100%;
  height: auto;
  object-fit: contain !important;
  margin: auto;
  border-radius: var(--radius);
}

.popupTerminaWindowHeader {
  grid-area: header;
}

.popupTerminaWindowTextContainer {
  grid-area: text;
}

.popupTerminalWindowFooter {
  grid-area: footer;
}

.techItemsList {
  display: inline-flex;
  list-style: none;
  flex-wrap: wrap;
}

.techItemsList > li {
  padding-inline: 0.5rem;
}

.popupTerminalWindowLinkIcons {
  grid-area: linkIcons;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.popupTerminalWindowLinkIcon {
  color: var(--primaryText);
  transition: color 0.5s ease-in-out;
}

.popupTerminalWindowLinkIcon:hover {
  color: var(--linkText);
}

.popupTerminalWindowLinkIcon:active {
  position: relative;
  top: 2px;
}

.svgIcon {
  filter: invert(84%) sepia(0%) saturate(3021%) hue-rotate(176deg)
    brightness(131%) contrast(60%);
  width: 2rem;
}

.svgIcon:hover {
  filter: invert(79%) sepia(59%) saturate(2824%) hue-rotate(360deg)
    brightness(105%) contrast(104%);
}

.popupWindowLinkButton {
  align-items: normal;
  background-color: rgba(0, 0, 0, 0);
  border-color: rgb(0, 0, 238);
  border-style: none;
  box-sizing: content-box;
  color: var(--primaryText);
  cursor: pointer;
  display: inline;
  font: inherit;
  height: auto;
  padding: 3px;
  perspective-origin: 0 0;
  text-align: start;
  text-decoration: none;
  transform-origin: 0 0;
  width: auto;
  -moz-appearance: none;
  transition: color 0.5s ease-in-out;
}

.popupWindowLinkButton:active {
  position: relative;
  top: 2px;
}

.popupWindowLinkButton:hover {
  color: var(--linkText);
}

/* Mozilla uses a pseudo-element to show focus on buttons, */
/* but anchors are highlighted via the focus pseudo-class. */

@supports (-moz-appearance: none) {
  /* Mozilla-only */
  .popupWindowLinkButton::-moz-focus-inner {
    /* reset any predefined properties */
    border: none;
    padding: 0;
  }
  .popupWindowLinkButton:focus {
    /* add outline to focus pseudo-class */
    outline-style: dotted;
    outline-width: 1px;
  }
}

@media (max-width: 700px) {
  .popupTerminaWindowContainer {
    grid-template-rows: auto auto auto auto;
    grid-template-areas:
      "header header header header"
      "image image image image"
      "linkIcons linkIcons linkIcons linkIcons"
      "text text text text";
  }

  .popupTerminaWindowImage {
    width: 100%;
  }

  .popupTerminalWindowImageContainer > * {
    width: 60%;
  }

  .popupTerminalWindowLinkIcons {
    justify-content: center;
    align-items: center;
  }
  .popupTerminalWindowLinkIcon {
    margin-inline: 2vw;
    transition: color 0.5s ease-in-out;
  }
}

.wb-title {
  font-family: inherit;
  font-size: inherit;
  display: flex;
  width: 100%;
  justify-content: center;
}

.wb-icon {
  display: flex;
  align-items: center;
}

.wb-header {
  display: flex;
  align-content: center;
}

.wb-min {
  background: #00ca56;
  width: 14px;
  height: 14px;
  border: 1px solid #14ae46;
  border-radius: 50%;
  margin-inline: 0.3rem;
  order: 3;
  transition: filter 0.3s;
}

.wb-max {
  background: #ffbd4c;
  width: 14px;
  height: 14px;
  border: 1px solid #e09e3e;
  border-radius: 50%;
  margin-inline: 0.3rem;
  order: 2;
  transition: filter 0.3s;
}

.wb-close {
  background: #ff5c5c;
  width: 14px;
  height: 14px;
  border: 1px solid #e33e41;
  border-radius: 50%;
  margin-inline: 0.3rem;
  margin-left: 10px;
  order: 1;
  transition: filter 0.3s;
}

.wb-close:hover {
  filter: brightness(70%);
}

.wb-min:hover {
  filter: brightness(70%);
}

.wb-max:hover {
  filter: brightness(70%);
}

.wb-full {
  display: none;
}

@media (max-width: 1000px) {
  .wb-min {
    width: 20px;
    height: 20px;
  }

  .wb-max {
    width: 20px;
    height: 20px;
  }

  .wb-close {
    width: 20px;
    height: 20px;
  }
}

